Add Computer Vision section to skills

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -26,10 +26,10 @@ $\bullet$ \textbf{Languages}     & C, C++, Python, Bash          & $\bullet$ \te
 $\bullet$ \textbf{Build Systems} & CMake (main), Make, Bazel     & $\bullet$ \textbf{VCS, DVCS}     & Git (main), Perforce, Subversion \\
 $\bullet$ \textbf{Libraries}     & STL, Boost, CAF, Poco         & $\bullet$ \textbf{OS}            & WinAPI, POSIX, ThreadX, KasperskyOS \\
 $\bullet$ \textbf{Frameworks}    & ROS, Qt                       & $\bullet$ \textbf{DevOps}        & Docker, Vagrant, Ansible, SaltStack  \\
-$\bullet$ \textbf{Testing}       & CppUTest, GoogleTest          & $\bullet$ \textbf{CI, CD}        & QuickBuild, Jenkins, TeamCity, TFS \\
+$\bullet$ \textbf{Unit Testing}  & CppUTest, GoogleTest          & $\bullet$ \textbf{CI, CD}        & QuickBuild, Jenkins, TeamCity, TFS \\
 $\bullet$ \textbf{SAST}          & Cppcheck, PVS‑Studio          & $\bullet$ \textbf{Data Analysis} & Jupyter, NumPy, Pandas, Seaborn, SQL \\
 $\bullet$ \textbf{Comp. Science} & Algorithms, Design Patterns   & $\bullet$ \textbf{ML, DL}        & Scikit-learn, Tensorflow (Keras), PyTorch \\
-$\bullet$ \textbf{Applied Math}  & Lin. Algebra, Calculus, Stats \\
+$\bullet$ \textbf{Applied Math}  & Lin. Algebra, Calculus, Stats & $\bullet$ \textbf{Comp. Vision}  & OpenCV, CNN, Image Classification \\
 
 \end{tabular}
 \end{rSection}
@@ -46,7 +46,7 @@ $\bullet$ \textbf{Applied Math}  & Lin. Algebra, Calculus, Stats \\
 \item Implemented 2 features for GeoHub: power rails monitor (ADC driver, ROS node), programmatic config for IMU frame.
 \item Ported rootfs switcher from amd64 (PC) to arm64 (Jetson AGX Xavier). Covered 2 scenarios: Yandex.Rover, Xavier farm.
 \item Camera pipeline. Reduced logging size via ring buffer. Implemented 9 new status monitors and camera frames filter.
-\item Configured CI (TeamCity) for 2 third-party libs (ser2net, rtklib). Artifacts: deb packets for armhf, arm64, amd64.
+\item Configured CI (TeamCity) for 2 third-party libs (ser2net, rtklib). Artifacts: deb packets (armhf, arm64, amd64).
 
 \end{rCompany}
 \begin{rCompany}{\href{https://arrival.com/}{Arrival Robotics}}{June 2017 -- October 2019}{Lead Software Engineer}{St. Petersburg, RU}
