Fixup after HR review

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -5,16 +5,17 @@
 \address{
     \faPhoneSquare \ +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 $\bullet$\
     \faEnvelope \ \href{mailto:job@vova-ivanov.info}{job@vova-ivanov.info} $\bullet$\
-    \faLinkedinSquare \ \href{https://www.linkedin.com/in/vladimir-yu-ivanov/}{vladimir-yu-ivanov}}
+    \faGithubSquare \ \href{https://github.com/vyivanov}{github.com/vyivanov}
+}
 
-\address{\em Software (ML) Engineer, Moscow, RU}
+\address{\em Software (ML) Engineer}
 
 \begin{document}
 
 \begin{rSection}{summary}
 
-$\bullet$ Proficient engineer with focus on 3 domains. Electrical Engineering, Computer Science, Machine Learning. \\
-$\bullet$ Built practical experience in 3 areas. Consumer Electronics, Industrial IoT and Robotics, Self-Driving Cars. \\
+$\bullet$ Proficient engineer with focus on 3 domains. Computer Science, Electrical Engineering, Machine Learning. \\
+$\bullet$ Built practical experience in 3 areas. Consumer Electronics, Industrial IoT and Robotics, Self-Driving Technology. \\
 $\bullet$ Helped to solve SW and HW problems for 4 types of companies. Outsource, Startup, Private, Public.
 
 \end{rSection}
@@ -22,11 +23,11 @@ $\bullet$ Helped to solve SW and HW problems for 4 types of companies. Outsource
 \begin{rSection}{skills}
 \begin{tabular}{llll}
 
-$\bullet$ \textbf{Languages}     & C, C++, Python, Bash          & $\bullet$ \textbf{Embedded}      & MCU, RTOS, Schematics, Lab Equipment \\
-$\bullet$ \textbf{Build Systems} & CMake (main), Make, Bazel     & $\bullet$ \textbf{VCS, DVCS}     & Git (main), Perforce, Subversion \\
+$\bullet$ \textbf{Languages}     & C, C++, Python, Bash          & $\bullet$ \textbf{Embedded}      & MCU, RTOS, Schematics, Boards Bring-up \\
+$\bullet$ \textbf{Build Systems} & CMake, Make, Bazel            & $\bullet$ \textbf{VCS, DVCS}     & Git, Perforce, Subversion \\
 $\bullet$ \textbf{Libraries}     & STL, Boost, CAF, Poco         & $\bullet$ \textbf{OS}            & WinAPI, POSIX, ThreadX, KasperskyOS \\
-$\bullet$ \textbf{Frameworks}    & ROS, Qt                       & $\bullet$ \textbf{DevOps}        & Docker, Vagrant, Ansible, SaltStack  \\
-$\bullet$ \textbf{Unit Testing}  & CppUTest, GoogleTest          & $\bullet$ \textbf{CI, CD}        & QuickBuild, Jenkins, TeamCity, TFS \\
+$\bullet$ \textbf{Frameworks}    & ROS, Qt                       & $\bullet$ \textbf{DevOps}        & Docker, Vagrant, Ansible, SaltStack \\
+$\bullet$ \textbf{Unit Testing}  & CppUTest, GTest, PyTest       & $\bullet$ \textbf{CI, CD}        & QuickBuild, Jenkins, TeamCity, TFS \\
 $\bullet$ \textbf{SAST}          & Cppcheck, PVS‑Studio          & $\bullet$ \textbf{Data Analysis} & Jupyter, NumPy, Pandas, Seaborn, SQL \\
 $\bullet$ \textbf{Comp. Science} & Algorithms, Design Patterns   & $\bullet$ \textbf{ML, DL}        & Scikit-learn, Tensorflow (Keras), PyTorch \\
 $\bullet$ \textbf{Applied Math}  & Lin. Algebra, Calculus, Stats & $\bullet$ \textbf{Comp. Vision}  & OpenCV, CNN, Image Classification \\
@@ -35,12 +36,12 @@ $\bullet$ \textbf{Applied Math}  & Lin. Algebra, Calculus, Stats & $\bullet$ \te
 \end{rSection}
 
 \begin{rSection}{experience}
-\begin{rCompany}{\href{https://www.aprotech.ru/}{Kaspersky, Aprotech}}{February 2022 -- present}{Lead Software Engineer}{Moscow, RU}
+\begin{rCompany}{Kaspersky, Aprotech -- \href{https://aprotech.ru}{aprotech.ru}}{2022 -- present}{Lead Software Engineer}{Moscow, RU}
 
 \item TBD
 
 \end{rCompany}
-\begin{rCompany}{\href{https://sdc.yandex.com/}{Yandex, Self-Driving Group}}{October 2019 -- May 2021}{Software Engineer}{Moscow, RU}
+\begin{rCompany}{Yandex, Self-Driving Group -- \href{https://sdg.yandex.com}{sdg.yandex.com}}{2019 -- 2021}{Software Engineer}{Moscow, RU}
 
 \item Integrated orientation (IMU) and localization (RTK) device into electrical and network rover infrastructure (GeoHub).
 \item Implemented 2 features for GeoHub: power rails monitor (ADC driver, ROS node), programmatic config for IMU frame.
@@ -49,7 +50,7 @@ $\bullet$ \textbf{Applied Math}  & Lin. Algebra, Calculus, Stats & $\bullet$ \te
 \item Configured CI (TeamCity) for 2 third-party libs (ser2net, rtklib). Artifacts: deb packets (armhf, arm64, amd64).
 
 \end{rCompany}
-\begin{rCompany}{\href{https://arrival.com/}{Arrival Robotics}}{June 2017 -- October 2019}{Lead Software Engineer}{St. Petersburg, RU}
+\begin{rCompany}{Arrival Robotics -- \href{https://arrival.com}{arrival.com}}{2017 -- 2019}{Lead Software Engineer}{St. Petersburg, RU}
 
 \item Launched programmatic control for 4 industrial robot manipulators. Vendors: Kuka, Fanuc, ABB, Universal Robots.
 \item Contributed 1 feature to robotic simulator (Gazebo): control of scene objects via keyboard (moving, rotation).
@@ -58,7 +59,7 @@ $\bullet$ \textbf{Applied Math}  & Lin. Algebra, Calculus, Stats & $\bullet$ \te
 \item Tech interview holding. Reviewed more than 10 candidates: embedded SW engineers, HW engineers, QA engineers.
 
 \end{rCompany}
-\begin{rCompany}{\href{http://www.rhondasoftware.com}{Rhonda Software}}{October 2012 -- May 2017}{Software Engineer I, II, III}{Vladivostok, RU}
+\begin{rCompany}{Rhonda Software -- \href{https://rhondasoftware.com}{rhondasoftware.com}}{2012 -- 2017}{Software Engineer I, II, III}{Vladivostok, RU}
 
 \item Supported Camera-SDK (proprietary) components. Linux and RTOS device drivers. Firmware burning tool (Qt).
 \item Implemented raw data transceiver lib. Cross-platform: Windows, Linux, RTOS, multi-protocol: USB, UART, TCP.
@@ -67,7 +68,7 @@ $\bullet$ \textbf{Applied Math}  & Lin. Algebra, Calculus, Stats & $\bullet$ \te
 \item Resolved a number of MP-blocking SW issues for 6 camera brands: Nikon, Pentax, Fujifilm, Samsung, Garmin, Ability.
 
 \end{rCompany}
-\begin{rCompany}{Spider Pacific}{October 2010 -- October 2012}{Electrical Engineer}{Vladivostok, RU}
+\begin{rCompany}{Spider Pacific}{2010 -- 2012}{Electrical Engineer}{Vladivostok, RU}
 
 \item Designed HW of 4 device prototypes via end-to-end process: schematic (Eagle CAD), firmware (C99), PCBA.
 \item Utilized MCU (AVR), text LCD, accel-gyro sensors, vacuum tubes, op-amps, domain-specific IC and more.
@@ -77,13 +78,13 @@ $\bullet$ \textbf{Applied Math}  & Lin. Algebra, Calculus, Stats & $\bullet$ \te
 
 \begin{rSection}{education}
 
-{\bf \href{https://en.misis.ru}{National University of Science and Technology \textquote{MISIS}}} \hfill {2020 -- present} \\
-Institute of Information Technology and Computer Science \hfill {Moscow, Russian Federation} \\
-M.Sc. Machine Learning. GPA: 3.78 out of 4.00
+{\bf National University of Science and Technology \textquote{MISIS} \href{https://en.misis.ru}{(en.misis.ru)}} \hfill {2020 -- present} \\
+Institute of Information Technology and Computer Science \hfill {Moscow, RU} \\
+M.Sc. Machine Learning. GPA: 4.7 out of 5.0
 
-{\bf \href{https://www.dvfu.ru/en/}{Far Eastern State University}} \hfill {2005 -- 2010} \\
-Institute of Physics and Information Technology \hfill {Vladivostok, Russian Federation} \\
-B.Sc. Electrical Engineering. GPA: 3.63 out of 4.00
+{\bf Far Eastern State University \href{https://dvfu.ru/en}{(dvfu.ru/en)}} \hfill {2005 -- 2010} \\
+Institute of Physics and Information Technology \hfill {Vladivostok, RU} \\
+B.Sc. Electrical Engineering. GPA: 4.5 out of 5.0
 
 \end{rSection}
 
