--- a/template.cls
+++ b/template.cls
@@ -83,11 +83,9 @@
 
 %%%%  EXPERIENCE FORMATTING  %%%%
 
-\newenvironment{rCompany}[4] {                      %% 4 input arguments: company name, year(s) employed, job title and location
-    {\bf #1} \hfill {#2}                            %% Bold company name and date on the right
-    \ifthenelse{\equal{#3}{}}                       %% If the third argument is not specified, don't print the job title and location line
-    {}
-    {\\{\em #3} \hfill {#4}}                        %% Italic job title and location
+\newenvironment{rCompany}[6] {
+    {\bf #1} \ifthenelse{\equal{#2}{}} {--} {[\href{http://#2}{ #2 }] --} {#3} \hfill {#4} \\
+    {\em #5} \hfill {#6}
     \smallskip
     \begin{list}{$\cdot$}{\leftmargin=0em}          %% \cdot used for bullets, no indentation
     \itemsep -0.5em \vspace{-0.5em}                 %% Compress items in list together for aesthetics
@@ -95,12 +93,12 @@
 
 \newenvironment{rItemize} {
     \medskip
-    \begin{list}{$\cdot$}{\leftmargin=0em}          %% \cdot used for bullets, no indentation
-    \itemsep -0.5em \vspace{-0.5em}                 %% Compress items in list together for aesthetics
-}{\end{list}\vspace{0.5em}}                         %% Some space after the list of bullet points
+    \begin{list}{$\bullet$}{\leftmargin=0em}        %% \cdot used for bullets, no indentation
+    \itemsep -0.6em \vspace{-0.5em}                 %% Compress items in list together for aesthetics
+}{\end{list}}                                       %% Some space after the list of bullet points
 
 % The below commands define the whitespace after certain things in the document - they can be \smallskip, \medskip or \bigskip
-\def\namesize{\huge}                               %% Size of the name at the top of the document
+\def\namesize{\huge}                                %% Size of the name at the top of the document
 \def\addressskip{\smallskip}                        %% The space between the two address (or phone/email) lines
 \def\sectionlineskip{\medskip}                      %% The space above the horizontal line for each section
 \def\nameskip{\bigskip}                             %% The space after your name at the top
