--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -3,45 +3,47 @@
 \name{Vladimir Yu. Ivanov}
 
 \address{
-    \faPhoneSquare \ +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 $\bullet$\
-    \faEnvelope \ \href{mailto:job@vova-ivanov.info}{job@vova-ivanov.info} $\bullet$\
-    \faGithubSquare \ \href{https://github.com/vyivanov}{github.com/vyivanov}
+    \faGithubSquare \ \href{https://github.com/vyivanov}{github.com/vyivanov} $\bullet$\
+    \faEnvelope \ \href{mailto:vladimir.u.ivanov@gmail.com}{vladimir.u.ivanov@gmail.com} $\bullet$\
+    \faLinkedinSquare \ \href{https://linkedin.com/in/vladimir-yu-ivanov}{bit.ly/3AT2CHF}
 }
 
-\address{\em Software (ML) Engineer}
+\address{\em Software Engineer, Moscow (C++, Robotics, IIoT)}
 
 \begin{document}
 
 \begin{rSection}{summary}
+\begin{rItemize}
 
-$\bullet$ Proficient engineer with focus on 3 domains. Computer Science, Electrical Engineering, Machine Learning. \\
-$\bullet$ Built practical experience in 3 areas. Consumer Electronics, Industrial IoT and Robotics, Self-Driving Technology. \\
-$\bullet$ Helped to solve SW and HW problems for 4 types of companies. Outsource, Startup, Private, Public.
+\item Proficient engineer with focus on 3 domains. Computer Science, Electrical Engineering, Machine Learning.
+\item Built practical experience in 3 areas. Consumer Electronics, Industrial IoT and Robotics, Self-Driving Technology.
+\item Helped to solve SW and HW problems for 4 types of companies. Outsource, Startup, Private, Public.
 
+\end{rItemize}
 \end{rSection}
 
 \begin{rSection}{skills}
 \begin{tabular}{llll}
 
-$\bullet$ \textbf{Languages}     & C, C++, Python, Bash          & $\bullet$ \textbf{Embedded}      & MCU, RTOS, Schematics, Boards Bring-up \\
-$\bullet$ \textbf{Build Systems} & CMake, Make, Bazel            & $\bullet$ \textbf{VCS, DVCS}     & Git, Perforce, Subversion \\
-$\bullet$ \textbf{Libraries}     & STL, Boost, CAF, Poco         & $\bullet$ \textbf{OS}            & WinAPI, POSIX, ThreadX, KasperskyOS \\
-$\bullet$ \textbf{Frameworks}    & ROS, Qt                       & $\bullet$ \textbf{DevOps}        & Docker, Vagrant, Ansible, SaltStack \\
-$\bullet$ \textbf{Unit Testing}  & CppUTest, GTest, PyTest       & $\bullet$ \textbf{CI, CD}        & QuickBuild, Jenkins, TeamCity, TFS \\
-$\bullet$ \textbf{SAST}          & Cppcheck, PVS‑Studio          & $\bullet$ \textbf{Data Analysis} & Jupyter, NumPy, Pandas, Seaborn, SQL \\
-$\bullet$ \textbf{Comp. Science} & Algorithms, Design Patterns   & $\bullet$ \textbf{ML, DL}        & Scikit-learn, Tensorflow (Keras), PyTorch \\
-$\bullet$ \textbf{Applied Math}  & Lin. Algebra, Calculus, Stats & $\bullet$ \textbf{Comp. Vision}  & OpenCV, CNN, Image Classification \\
+$\bullet$ \textbf{Main Langs}    & C, C++17 (STL, Boost)       & $\bullet$ \textbf{DevOps Tools} & Docker, Vagrant, SaltStack \\
+$\bullet$ \textbf{Misc Langs}    & Bash, Python-3 (ML/DL libs) & $\bullet$ \textbf{OS, RTOS}     & WinAPI, POSIX, ThreadX \\
+$\bullet$ \textbf{Build Systems} & CMake, Make, Bazel          & $\bullet$ \textbf{CI/CD}        & Jenkins, TeamCity, TFS \\
+$\bullet$ \textbf{VCS, DVCS}     & Git, Perforce, Subversion   & $\bullet$ \textbf{SAST, DAST}   & Cppcheck, PVS-Studio, Clang-Tidy \\
+$\bullet$ \textbf{Frameworks}    & ROS, MQTT (Mosquitto), Qt   & $\bullet$ \textbf{Embedded}     & MCU (AVR), Schematic, Board Bring-up
 
 \end{tabular}
 \end{rSection}
 
 \begin{rSection}{experience}
-\begin{rCompany}{Kaspersky, Aprotech -- \href{https://aprotech.ru}{aprotech.ru}}{2022 -- present}{Lead Software Engineer}{Moscow, RU}
+\begin{rCompany}{Kaspersky, Aprotech}{aprotech.online}{development of secure industrial data diodes}{2022 -- 2022}{Senior Software Engineer}{Moscow, RU}
 
-\item TBD
+\item Suggested and contributed 1 feature: print product info (semver, build date, commit SHA, CI id and arbitrary label).
+\item Helped to port MQTT publisher PoC on new code base. Added MQTT over TLS support. Utilized Paho, Mosquitto.
+\item Minimized surface attack on 3rd-party via reducing crypto providers from 2 to 1 (MbedTLS replaced with OpenSSL).
+\item Fixed issue with X.509 certificate generation to secure connect KISG-100 product and Siemens SINUMERIK CNC.
 
 \end{rCompany}
-\begin{rCompany}{Yandex, Self-Driving Group -- \href{https://sdg.yandex.com}{sdg.yandex.com}}{2019 -- 2021}{Software Engineer}{Moscow, RU}
+\begin{rCompany}{Yandex, Self-Driving Group}{sdg.yandex.com}{contribution to self-driving cars technology}{2019 -- 2021}{Software Engineer}{Moscow, RU}
 
 \item Integrated orientation (IMU) and localization (RTK) device into electrical and network rover infrastructure (GeoHub).
 \item Implemented 2 features for GeoHub: power rails monitor (ADC driver, ROS node), programmatic config for IMU frame.
@@ -50,7 +52,7 @@ $\bullet$ \textbf{Applied Math}  & Lin. Algebra, Calculus, Stats & $\bullet$ \te
 \item Configured CI (TeamCity) for 2 third-party libs (ser2net, rtklib). Artifacts: deb packets (armhf, arm64, amd64).
 
 \end{rCompany}
-\begin{rCompany}{Arrival Robotics -- \href{https://arrival.com}{arrival.com}}{2017 -- 2019}{Lead Software Engineer}{St. Petersburg, RU}
+\begin{rCompany}{Arrival Robotics}{arrival.com}{creation of flexible robotized industrial factory}{2017 -- 2019}{Lead Software Engineer}{St. Petersburg, RU}
 
 \item Launched programmatic control for 4 industrial robot manipulators. Vendors: Kuka, Fanuc, ABB, Universal Robots.
 \item Contributed 1 feature to robotic simulator (Gazebo): control of scene objects via keyboard (moving, rotation).
@@ -59,7 +61,7 @@ $\bullet$ \textbf{Applied Math}  & Lin. Algebra, Calculus, Stats & $\bullet$ \te
 \item Tech interview holding. Reviewed more than 10 candidates: embedded SW engineers, HW engineers, QA engineers.
 
 \end{rCompany}
-\begin{rCompany}{Rhonda Software -- \href{https://rhondasoftware.com}{rhondasoftware.com}}{2012 -- 2017}{Software Engineer I, II, III}{Vladivostok, RU}
+\begin{rCompany}{Rhonda Software}{rhondasoftware.com}{support and development of digital cameras}{2012 -- 2017}{Software Engineer I, II, III}{Vladivostok, RU}
 
 \item Supported Camera-SDK (proprietary) components. Linux and RTOS device drivers. Firmware burning tool (Qt).
 \item Implemented raw data transceiver lib. Cross-platform: Windows, Linux, RTOS, multi-protocol: USB, UART, TCP.
@@ -68,7 +70,7 @@ $\bullet$ \textbf{Applied Math}  & Lin. Algebra, Calculus, Stats & $\bullet$ \te
 \item Resolved a number of MP-blocking SW issues for 6 camera brands: Nikon, Pentax, Fujifilm, Samsung, Garmin, Ability.
 
 \end{rCompany}
-\begin{rCompany}{Spider Pacific}{2010 -- 2012}{Electrical Engineer}{Vladivostok, RU}
+\begin{rCompany}{Spider Pacific}{}{designing and manufacturing of applied devices for local market}{2010 -- 2012}{Electrical Engineer}{Vladivostok, RU}
 
 \item Designed HW of 4 device prototypes via end-to-end process: schematic (Eagle CAD), firmware (C99), PCBA.
 \item Utilized MCU (AVR), text LCD, accel-gyro sensors, vacuum tubes, op-amps, domain-specific IC and more.
@@ -78,13 +80,11 @@ $\bullet$ \textbf{Applied Math}  & Lin. Algebra, Calculus, Stats & $\bullet$ \te
 
 \begin{rSection}{education}
 
-{\bf National University of Science and Technology \textquote{MISIS} \href{https://en.misis.ru}{(en.misis.ru)}} \hfill {2020 -- present} \\
-Institute of Information Technology and Computer Science \hfill {Moscow, RU} \\
-M.Sc. Machine Learning. GPA: 4.7 out of 5.0
+{\bf University of Science and Technology \textquote{MISIS}} {[\href{https://en.misis.ru}{ en.misis.ru }]} \hfill {2020 -- 2022} \\
+MSc. Data Science. GPA 4.7 out of 5. (not completed) \hfill {Moscow, RU}
 
-{\bf Far Eastern State University \href{https://dvfu.ru/en}{(dvfu.ru/en)}} \hfill {2005 -- 2010} \\
-Institute of Physics and Information Technology \hfill {Vladivostok, RU} \\
-B.Sc. Electrical Engineering. GPA: 4.5 out of 5.0
+{\bf Far Eastern Federal University} {[\href{https://www.dvfu.ru/en}{ dvfu.ru/en }]} \hfill {2005 -- 2010} \\
+Engineer. Information Systems and Technology. GPA 4.5 out of 5. \hfill {Vladivostok, RU}
 
 \end{rSection}
 
