--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -3,12 +3,13 @@
 \name{Vladimir Yu. Ivanov}
 
 \address{
-    \faGithubSquare \ \href{https://github.com/vyivanov}{github.com/vyivanov} $\bullet$\
-    \faEnvelope \ \href{mailto:vladimir.u.ivanov@gmail.com}{vladimir.u.ivanov@gmail.com} $\bullet$\
-    \faLinkedinSquare \ \href{https://linkedin.com/in/vladimir-yu-ivanov}{bit.ly/3AT2CHF}
+    \faEnvelope {} \href{mailto:vladimir.u.ivanov@gmail.com}{vladimir.u.ivanov@gmail.com} {}
+    \faTelegram {} \href{https://t.me/vyivanov}{@vyivanov} {}
+    \faGithub {} \href{https://github.com/vyivanov}{github.com/vyivanov} {}
+    \faLinkedin {} \href{https://linkedin.com/in/vladimir-yu-ivanov}{bit.ly/3AT2CHF}
 }
 
-\address{\em Software Engineer, Moscow (C++, Robotics, IIoT)}
+\address{\em Software Engineer (10+ years), Moscow}
 
 \begin{document}
 
