--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -16,9 +16,9 @@
 \begin{rSection}{summary}
 \begin{rItemize}
 
-\item Proficient engineer with focus on 3 domains. Computer Science, Electrical Engineering, Machine Learning.
-\item Built practical experience in 3 areas. Consumer Electronics, Industrial IoT and Robotics, Self-Driving Technology.
-\item Helped to solve SW and HW problems for 4 types of companies. Outsource, Startup, Private, Public.
+\item Proficient engineer with focus on \textbf{3 domains}: Computer Science, Electrical Engineering, Machine Learning.
+\item Broad practical experience in \textbf{3 areas}: Consumer Electronics, Industrial IoT and Robotics, Self-Driving Technologies.
+\item Help to solve software and hardware problems for \textbf{4 types} of companies: Outsource, Startup, Product, Bigtech.
 
 \end{rItemize}
 \end{rSection}
