Reformat HTTP links
- replace rectangular brackets with parenthesis
- remove leading and trailing white spaces

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -80,10 +80,10 @@ $\bullet$ \textbf{Frameworks}    & ROS, MQTT (Mosquitto), Qt   & $\bullet$ \text
 
 \begin{rSection}{education}
 
-{\bf University of Science and Technology \textquote{MISIS}} {[\href{https://en.misis.ru}{ en.misis.ru }]} \hfill {2020 -- 2022} \\
+{\bf University of Science and Technology \textquote{MISIS}} {(\href{https://en.misis.ru}{en.misis.ru})} \hfill {2020 -- 2022} \\
 MSc. Data Science. GPA 4.7 out of 5. (not completed) \hfill {Moscow, RU}
 
-{\bf Far Eastern Federal University} {[\href{https://www.dvfu.ru/en}{ dvfu.ru/en }]} \hfill {2005 -- 2010} \\
+{\bf Far Eastern Federal University} {(\href{https://www.dvfu.ru/en}{dvfu.ru/en})} \hfill {2005 -- 2010} \\
 Engineer. Information Systems and Technology. GPA 4.5 out of 5. \hfill {Vladivostok, RU}
 
 \end{rSection}
