Fix broken HTTP link

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -43,7 +43,7 @@ $\bullet$ \textbf{Frameworks}    & ROS, MQTT (Mosquitto), Qt   & $\bullet$ \text
 \item Fixed issue with X.509 certificate generation to secure connect KISG-100 product and Siemens SINUMERIK CNC.
 
 \end{rCompany}
-\begin{rCompany}{Yandex, Self-Driving Group}{sdg.yandex.com}{contribution to self-driving cars technology}{2019 -- 2021}{Software Engineer}{Moscow, RU}
+\begin{rCompany}{Yandex, Self-Driving Group}{sdg.yandex.ru}{contribution to self-driving cars technology}{2019 -- 2021}{Software Engineer}{Moscow, RU}
 
 \item Integrated orientation (IMU) and localization (RTK) device into electrical and network rover infrastructure (GeoHub).
 \item Implemented 2 features for GeoHub: power rails monitor (ADC driver, ROS node), programmatic config for IMU frame.
