Add months for work periods

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -35,7 +35,7 @@ $\bullet$ \textbf{Frameworks}    & ROS, MQTT (Mosquitto), Qt   & $\bullet$ \text
 \end{rSection}
 
 \begin{rSection}{experience}
-\begin{rCompany}{Kaspersky, Aprotech}{aprotech.online}{development of secure industrial data diodes}{2022 -- 2022}{Senior Software Engineer}{Moscow, RU}
+\begin{rCompany}{Kaspersky, Aprotech}{aprotech.online}{development of secure industrial data diodes}{Feb 2022 -- Sep 2022}{Senior Software Engineer}{Moscow, RU}
 
 \item Suggested and contributed 1 feature: print product info (semver, build date, commit SHA, CI id and arbitrary label).
 \item Helped to port MQTT publisher PoC on new code base. Added MQTT over TLS support. Utilized Paho, Mosquitto.
@@ -43,7 +43,7 @@ $\bullet$ \textbf{Frameworks}    & ROS, MQTT (Mosquitto), Qt   & $\bullet$ \text
 \item Fixed issue with X.509 certificate generation to secure connect KISG-100 product and Siemens SINUMERIK CNC.
 
 \end{rCompany}
-\begin{rCompany}{Yandex, Self-Driving Group}{sdg.yandex.ru}{contribution to self-driving cars technology}{2019 -- 2021}{Software Engineer}{Moscow, RU}
+\begin{rCompany}{Yandex, Self-Driving Group}{sdg.yandex.ru}{contribution to self-driving cars technology}{Oct 2019 -- Jun 2021}{Software Engineer}{Moscow, RU}
 
 \item Integrated orientation (IMU) and localization (RTK) device into electrical and network rover infrastructure (GeoHub).
 \item Implemented 2 features for GeoHub: power rails monitor (ADC driver, ROS node), programmatic config for IMU frame.
@@ -52,7 +52,7 @@ $\bullet$ \textbf{Frameworks}    & ROS, MQTT (Mosquitto), Qt   & $\bullet$ \text
 \item Configured CI (TeamCity) for 2 third-party libs (ser2net, rtklib). Artifacts: deb packets (armhf, arm64, amd64).
 
 \end{rCompany}
-\begin{rCompany}{Arrival Robotics}{arrival.com}{creation of flexible robotized industrial factory}{2017 -- 2019}{Lead Software Engineer}{St. Petersburg, RU}
+\begin{rCompany}{Arrival Robotics}{arrival.com}{creation of flexible robotized industrial factory}{Jun 2017 -- Sep 2019}{Lead Software Engineer}{St. Petersburg, RU}
 
 \item Launched programmatic control for 4 industrial robot manipulators. Vendors: Kuka, Fanuc, ABB, Universal Robots.
 \item Contributed 1 feature to robotic simulator (Gazebo): control of scene objects via keyboard (moving, rotation).
@@ -61,7 +61,7 @@ $\bullet$ \textbf{Frameworks}    & ROS, MQTT (Mosquitto), Qt   & $\bullet$ \text
 \item Tech interview holding. Reviewed more than 10 candidates: embedded SW engineers, HW engineers, QA engineers.
 
 \end{rCompany}
-\begin{rCompany}{Rhonda Software}{rhondasoftware.com}{support and development of digital cameras}{2012 -- 2017}{Software Engineer I, II, III}{Vladivostok, RU}
+\begin{rCompany}{Rhonda Software}{rhondasoftware.com}{support and development of digital cameras}{Oct 2012 -- May 2017}{Software Engineer I, II, III}{Vladivostok, RU}
 
 \item Supported Camera-SDK (proprietary) components. Linux and RTOS device drivers. Firmware burning tool (Qt).
 \item Implemented raw data transceiver lib. Cross-platform: Windows, Linux, RTOS, multi-protocol: USB, UART, TCP.
@@ -70,7 +70,7 @@ $\bullet$ \textbf{Frameworks}    & ROS, MQTT (Mosquitto), Qt   & $\bullet$ \text
 \item Resolved a number of MP-blocking SW issues for 6 camera brands: Nikon, Pentax, Fujifilm, Samsung, Garmin, Ability.
 
 \end{rCompany}
-\begin{rCompany}{Spider Pacific}{}{designing and manufacturing of applied devices for local market}{2010 -- 2012}{Electrical Engineer}{Vladivostok, RU}
+\begin{rCompany}{Spider Pacific}{}{designing and manufacturing of applied devices for local market}{Sep 2010 -- Sep 2012}{Electrical Engineer}{Vladivostok, RU}
 
 \item Designed HW of 4 device prototypes via end-to-end process: schematic (Eagle CAD), firmware (C99), PCBA.
 \item Utilized MCU (AVR), text LCD, accel-gyro sensors, vacuum tubes, op-amps, domain-specific IC and more.
