--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -84,7 +84,7 @@ $\bullet$ \textbf{Frameworks}    & ROS, MQTT (Mosquitto), Qt   & $\bullet$ \text
 MSc. Data Science. GPA 4.7 out of 5. (not completed) \hfill {Moscow}
 
 {\bf Far Eastern Federal University} {(\href{https://www.dvfu.ru/en}{dvfu.ru/en})} \hfill {2005 -- 2010} \\
-Engineer. Information Systems and Technology. GPA 4.5 out of 5. \hfill {Vladivostok}
+Engineer. Information Systems and Technologies. GPA 4.5 out of 5. \hfill {Vladivostok}
 
 \end{rSection}
 
