Add 'Cognitive Robotics' experience

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -40,6 +40,15 @@ $\bullet$ \textbf{problem solving} & GDB, Valgrind, Strace, Ltrace,  & $\bullet$
 \end{rSection}
 
 \begin{rSection}{experience}
+\begin{rCompany}{Cognitive Robotics}{cognitivepilot.com}{Autopilot core design for agriculture and public vehicles}{Feb 2023 -- present}{Principal Software Engineer}{Moscow}
+
+\item Increased and stabilized IMU frame rate over UDP on 5\% between Control Unit (Jetson) and Navigation Module (arm64).
+\item Decoupled NN inference (Traffic Lights classifier) from Navigator via interface and intergated into 1 new tram module.
+\item Implemented and inregrated radar controller (SocketCAN, Kvaser) in 2 modes: targets detection (tracking), altitude measure.
+\item Integrated Redis support into LoRa daemon on Navigation Module (arm64) to stream RSSI into Control Unit (Jetson).
+\item Suggested and integrated git-svn tool to boost SVN mono-repository experience. Tool was in demand by 5 software engineers.
+
+\end{rCompany}
 \begin{rCompany}{Kaspersky Lab, Aprotech}{aprotech.online}{Industrial data diodes development with KasperskyOS}{Feb 2022 -- Sep 2022}{Senior Software Engineer}{Moscow}
 
 \item Helped to save product value: ported MQTT publisher prototype on new code base and added MQTT over SSL support.
