Invert engineering categories

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -61,7 +61,7 @@ $\bullet$ \textbf{Frameworks}    & ROS, MQTT (Mosquitto), Qt   & $\bullet$ \text
 \item Tech interview holding. Reviewed more than 10 candidates: embedded SW engineers, HW engineers, QA engineers.
 
 \end{rCompany}
-\begin{rCompany}{Rhonda Software}{rhondasoftware.com}{support and development of digital cameras}{Oct 2012 -- May 2017}{Software Engineer I, II, III}{Vladivostok}
+\begin{rCompany}{Rhonda Software}{rhondasoftware.com}{support and development of digital cameras}{Oct 2012 -- May 2017}{Software Engineer (III, II, I)}{Vladivostok}
 
 \item Supported Camera-SDK (proprietary) components. Linux and RTOS device drivers. Firmware burning tool (Qt).
 \item Implemented raw data transceiver lib. Cross-platform: Windows, Linux, RTOS, multi-protocol: USB, UART, TCP.
