Reformat 'Arrival Robotics' experience

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -52,7 +52,7 @@ $\bullet$ \textbf{Frameworks}    & ROS, MQTT (Mosquitto), Qt   & $\bullet$ \text
 \item Configured CI (TeamCity) for 2 third-party dependencies (ser2net, RTKLib). Artifacts -- deb packages (arm32, arm64, amd64).
 
 \end{rCompany}
-\begin{rCompany}{Arrival Robotics}{arrival.com}{creation of flexible robotized industrial factory}{Jun 2017 -- Sep 2019}{Lead Software Engineer}{St. Petersburg}
+\begin{rCompany}{Arrival Robotics}{arrival.com}{Creation of flexible robotized industrial factory technology}{Jun 2017 -- Sep 2019}{Lead Software Engineer}{St. Petersburg}
 
 \item Launched programmatic control for 4 industrial robot manipulators. Vendors: Kuka, Fanuc, ABB, Universal Robots.
 \item Contributed 1 feature to robotic simulator (Gazebo): control of scene objects via keyboard (moving, rotation).
