Reformat 'Spider Pacific' experience

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -70,7 +70,7 @@ $\bullet$ \textbf{Frameworks}    & ROS, MQTT (Mosquitto), Qt   & $\bullet$ \text
 \item Resolved a number of MP-blocking SW issues for 6 camera brands: Nikon, Pentax, Fujifilm, Samsung, Garmin, Ability.
 
 \end{rCompany}
-\begin{rCompany}{Spider Pacific}{}{designing and manufacturing of applied devices for local market}{Sep 2010 -- Sep 2012}{Electrical Engineer}{Vladivostok}
+\begin{rCompany}{Spider Pacific}{}{Designing and manufacturing of applied devices for local market}{Sep 2010 -- Sep 2012}{Electrical Engineer}{Vladivostok}
 
 \item Designed HW of 4 device prototypes via end-to-end process: schematic (Eagle CAD), firmware (C99), PCBA.
 \item Utilized MCU (AVR), text LCD, accel-gyro sensors, vacuum tubes, op-amps, domain-specific IC and more.
