Reformat 'Rhonda Software' experience

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -61,12 +61,12 @@ $\bullet$ \textbf{Frameworks}    & ROS, MQTT (Mosquitto), Qt   & $\bullet$ \text
 \item Tech interview holding. Reviewed more than 10 candidates: embedded SW engineers, HW engineers, QA engineers.
 
 \end{rCompany}
-\begin{rCompany}{Rhonda Software}{rhondasoftware.com}{support and development of digital cameras}{Oct 2012 -- May 2017}{Software Engineer (III, II, I)}{Vladivostok}
+\begin{rCompany}{Rhonda Software}{rhondasoftware.com}{Support and development of digital still cameras firmware}{Oct 2012 -- May 2017}{Software Engineer (III, II, I)}{Vladivostok}
 
-\item Supported Camera-SDK (proprietary) components. Linux and RTOS device drivers. Firmware burning tool (Qt).
-\item Implemented raw data transceiver lib. Cross-platform: Windows, Linux, RTOS, multi-protocol: USB, UART, TCP.
-\item Performed products bring-up (EVT, DVT) in electronics plants for 5 customers: Nanit, Fusar, Glide, Revl, Soloshot.
-\item Supported SW of photo cameras. Drivers: CCD/CMOS, BSP, NAND, DRAM, LCD. Firmware burning tool (WinForms).
+\item Supported Camera-SDK components: Embedded Linux and RTOS (ThreadX) device drivers, firmware burning tool (Qt).
+\item Implemented raw data transceiver library. Cross-platform (Windows, Linux, RTOS), multi-protocol (USB, UART, TCP).
+\item Performed products bringup (EVT and DVT) in electronics factories for 5 customers: Nanit, Fusar, Glide, Revl, Soloshot.
+\item Supported SW for still cameras. Drivers: CCD/CMOS, BSP, NAND, DRAM, LCD. Firmware burning tool (WinForms).
 \item Resolved a number of MP-blocking SW issues for 6 camera brands: Nikon, Pentax, Fujifilm, Samsung, Garmin, Ability.
 
 \end{rCompany}
